<resources>
    <string name="app_name">Telecaller</string>
    <string name="sign_in_message">Sign in to manage your campaigns and leads</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="having_trouble">Having trouble?</string>
    <string name="name_example_com">name@example.com</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="remember_password">Remember password?</string>
    <string name="need_help_contact_admin">Need help? Contact Admin</string>
    <string name="don_t_worry">Don\'t worry! It happens. Please enter the email associated with your account.</string>
    <string name="email_address">Email Address</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="resend">Resend</string>
    <string name="need_help">Need help?</string>
    <string name="password">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="return_to_login">Return to Login</string>
    <string name="password_check_message">We have sent password recovery instructions to your email. Please check your inbox and follow the link to reset your password.</string>
    <string name="check_your_mail">Check your mail</string>
    <string name="didn_t_receive_the_email">Didn\'t receive the email?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_sign_out">Yes, Sign Out</string>
    <string name="are_you_sure">Are you sure you want to sign out? You will need to log back in to access your leads.</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_item">Menu Item</string>
    <string name="all_leads">All Leads</string>
    <string name="sarah_jenkins">Sarah Jenkins</string>
    <string name="view_profile">View Profile</string>
    <string name="accepting_calls">Accepting Calls</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="campaigns">Campaigns</string>
    <string name="teleconnect_app_v1_2_0">TeleConnect App v1.2.0</string>
    <string name="_3">3</string>
    <string name="message_templates">Message Templates</string>
    <string name="settings">Settings</string>
    <string name="my_donors">My Donors</string>
    <string name="prasadam_form">Prasadam Form</string>
    <string name="donation_form">Donation Form</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="full_name">Full Name</string>
    <string name="sarah_j_comopony_com">sarah.j@comopony.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_1_555_123_4567">+1 (555) 123-4567</string>
    <string name="employee_id">Employee ID</string>
    <string name="emp_4921">EMP-4921</string>
    <string name="save_changes">Save Changes</string>
    <string name="dashboard">Dashboard</string>
    <string name="leads">Leads</string>
    <string name="call_stats">Call Stats</string>
    <string name="edit_message">Edit Message</string>
    <string name="save">Save</string>
    <string name="template_initial_outreach">Template: Initial Outreach</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="message">Hi {{Name}},\n\nThanks for your interest in our property at Sunset Boulevard. I\'d love to schedule a quick call to discuss the details.\n\nAre you available this {{Day}} afternoon?\n\nBest,\n{{AgentName}}</string>
    <string name="_142_characters">142 characters</string>
    <string name="insert_variable">INSERT VARIABLE</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="agent_name">Agent Name</string>
    <string name="send_via_whatsapp">Send via WhatsApp</string>
    <string name="submit_donation">Submit Donation</string>
    <string name="any_additional_notes">Any additional notes...</string>
    <string name="comments">Comments</string>
    <string name="trust_name">Trust Name</string>
    <string name="occasion">Occasion</string>
    <string name="seva_name">Seva Name</string>
    <string name="database_name">Database Name</string>
    <string name="classification">CLASSIFICATION</string>
    <string name="png_jpg_gif_up_to_5mb">PNG, JPG, GIF up to 5MB</string>
    <string name="upload_a_file_or_drag_and_drop">Upload a file or drag and drop</string>
    <string name="payment_screenshot">Payment Screenshot</string>
    <string name="e_g_txn12345678">e.g. TXN12345678</string>
    <string name="transaction_ref_no">Transaction Ref No.</string>
    <string name="mode">Mode</string>
    <string name="type">Type</string>
    <string name="_0_00">₹ 0.00</string>
    <string name="donation_amount_rs">Donation Amount (Rs.)</string>
    <string name="payment_info">PAYMENT INFO</string>
    <string name="type_of_donor">Type of Donor</string>
    <string name="location">Location</string>
    <string name="_10_digit_number">10-digit number</string>
    <string name="mobile_no">Mobile No *</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="donor_name">Donor Name</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="tele_caller">Tele Caller</string>
    <string name="_2023_10_27">2023-10-27</string>
    <string name="select_date">Select date</string>
    <string name="donor_details">DONOR DETAILS</string>
    <string name="record_donation">Record Donation</string>
    <string name="select_donor_type">Select donor type</string>
    <string name="name_of_donor">Name of Donor *</string>
    <string name="logged_by_telecaller_name">Logged By (Telecaller Name)</string>
    <string name="anjali_sharma">Anjali Sharma</string>
    <string name="date_of_donation">Date of Donation</string>
    <string name="enter_donor_s_full_name">Enter donor\'s full name</string>
    <string name="enter_donor_s_mobile_number">Enter donor\'s mobile number</string>
    <string name="amount_donated">Amount Donated *</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="enter_complete_address_for_prasadam_delivery">Enter complete address for prasadam delivery...</string>
    <string name="save_prasadam_entry">Save Prasadam Entry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>