<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F7F9"
    tools:context=".CheckYourMail">

    <!-- Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Circle Background -->
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp">

                <View
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_bg" />

                <!-- Mail Icon -->
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email"
                    app:tint="#DEA02C" />

                <!-- Green Check -->
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="6dp"
                    android:background="@drawable/check_bg"
                    android:padding="6dp"
                    android:src="@drawable/ic_check"
                    app:tint="@android:color/white" />

            </FrameLayout>

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/check_your_mail"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Description -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/password_check_message"
                android:textColor="#6B7280"
                android:textSize="14sp" />

            <!-- Button -->
            <Button
                android:id="@+id/btnReturnLogin"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#2FA8E1"
                android:clickable="true"
                android:text="@string/return_to_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <!-- Resend -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_receive_the_email"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/resend"
                    android:textColor="#1E88E5"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>